Leading time-zone is CET
some confusion due to clock change “winter / summer time” in some countries ...

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="col-lg-6 col-md-6">
         <div class="service-box mt-1 mx-auto">
           <ul class="text-faded mb-4">
-            <li>Release: 25 March 18 (10 pm CET | 5 pm EDT)</li>               
+            <li>Release: 25 March 18 (10 pm CET)</li>               
             <li>Ticker: SUN</li>
             <li>Max coins: est. 18 mil</li>
             <li>Premine: 4%</li>
