--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
      <div class="row">
       <div class="col-lg-12 text-center mt-5">
         <p class="text-faded">Suncoin is a proud fork of <a class="text-faded" href="">Dash</a>. Kudos to the Dash team for the hard work and creating the technical foundation for a community driven project as Suncoin.</p>
-        <p class="text-faded"><a href="https://graviex.net/listing_registers"><img src="https://i.imgur.com/lLE6iEW.png"></a><br>listing request on Graviex</p>        
+        <p class="text-faded"><a href="https://graviex.net/listing_registers"><img src="https://i.imgur.com/lLE6iEW.png"></a><br><br>SunCoin is listed on Graviex</p>        
       </div>
     </div>
   </div> 
